# rbkairos_sim

./: README.md
docker/: Dockerfile  docker-compose.yml
rbkairos_gazebo/: CMakeLists.txt  package.xml
rbkairos_gazebo/config/: gripper_control.yaml  rbkairos_a_control.yaml  rbkairos_b_control.yaml  rbkairos_control.yaml  robot_b_control.yaml  robot_control.yaml
rbkairos_gazebo/launch/: gazebo_rviz.launch  rbkairos_gazebo.launch  rbkairos_one_robot.launch  spawn_robot.launch  spawn_simulation.launch
rbkairos_gazebo/rviz/: rbkairos_a.rviz  rviz.rviz
rbkairos_gazebo/worlds/: electrolux_map.world  office.world  test_constructa.world
rbkairos_sim/: CMakeLists.txt  package.xml
rbkairos_sim_bringup/: CMakeLists.txt  package.xml  points.yaml
rbkairos_sim_bringup/config/robot_local_control/: base_configuration.yaml  localization.yaml  navigation.yaml  robot_status.yaml
rbkairos_sim_bringup/launch/: movebase.launch  rbkairos_complete.launch  run_robot.launch  run_rviz.launch  run_simulation.launch
rbkairos_sim_bringup/launch/robot_local_control/: robot_local_control.launch
rbkairos_sim_bringup/scripts/: rbkairos_client.py
rbkairos_webots/: CMakeLists.txt  README.md  package.xml
rbkairos_webots/control/: rb_theron_control.yaml  rb_theron_diffdrive_control.yaml
rbkairos_webots/launch/: camera_info_publisher.launch  rbkairos_webots.launch  rbkairos_webots_complete.launch  rbkairos_webots_one_robot.launch  spawner.launch  webots.launch
rbkairos_webots/maps/: map_prueba_mundo2.pgm  map_prueba_mundo2.yaml
rbkairos_webots/protos/: rbkairos_ur5.proto  rbkairos_ur5_robot.proto
rbkairos_webots/rviz/: default.rviz
rbkairos_webots/worlds/: .empty.wbproj  .prueba_mundo2.wbproj  .warehouse.wbproj  empty.wbt  empty_.wbt  prueba_mundo2.wbt  warehouse.wbt
repos/: rbkairos_sim.repos
