<package>
  <name>rbkairos_webots</name>
  <version>1.1.3</version>
  <description>
		Launch files and world files to start the models in webots
  </description>

  <license>BSD</license>
  <!--<url type="website">http://ros.org/wiki/sucker_webots</url> ToDo: Create website doc-->
  <!--<url type="repository">https://github.com/RobotnikAutomation/sucker_sim.git</url> -->

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="cgonzalez@robotnik.es">Claudia González</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rbkairos_control</build_depend>
  <build_depend>rbkairos_description</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>webots_ros</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rbkairos_control</run_depend>
  <run_depend>rbkairos_description</run_depend>
  <run_depend>webots_utilities</run_depend>
  <run_depend>robotnik_msgs</run_depend>

  <run_depend>xacro</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>imu_complementary_filter</run_depend>
  <run_depend>webots_ros</run_depend>

  <run_depend>sensor_msgs</run_depend>

</package>
